added generic repository

--- a/ProfileMatch.Services/ProfileMatch.Services.csproj
+++ b/ProfileMatch.Services/ProfileMatch.Services.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ProfileMatch.Contracts\ProfileMatch.Contracts.csproj" />
     <ProjectReference Include="..\ProfileMatch.Models\ProfileMatch.Models.csproj" />
+    <ProjectReference Include="..\ProfileMatch.Repositories\ProfileMatch.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
