--- a/ProfileMatch.Sites/ProfileMatch.Sites.csproj
+++ b/ProfileMatch.Sites/ProfileMatch.Sites.csproj
@@ -33,4 +33,10 @@
     <Folder Include="SuperUser\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Admin\EditUser.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
+
 </Project>
