added fake mail service

--- a/ProfileMatch.Web/appsettings.json
+++ b/ProfileMatch.Web/appsettings.json
@@ -9,5 +9,18 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ExternalProviders": {
+    "MailKit": {
+      "SMTP": {
+        "Address": "smtp.ethereal.email",
+        "Port": "587",
+        "Account": "dfpxisxhjdtgyeud@ethereal.email",
+        "Password": "gPjFBmFptwB83MV2nn",
+        "SenderEmail": "dfpxisxhjdtgyeud@ethereal.email",
+        "SenderName": "Profile Match Portal"
+      }
+    }
+  }
 }
