--- a/ProfileMatch.Models/ProfileMatch.Models.csproj
+++ b/ProfileMatch.Models/ProfileMatch.Models.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.10" />
+    <PackageReference Include="MailKit" Version="2.15.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.11" />
   </ItemGroup>
 
 </Project>
