--- a/ProfileMatch.Components/ProfileMatch.Components.csproj
+++ b/ProfileMatch.Components/ProfileMatch.Components.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="5.0.11" />
     <PackageReference Include="MudBlazor" Version="5.1.5" />
   </ItemGroup>
 
