--- a/ProfileMatch.Services/ProfileMatch.Services.csproj
+++ b/ProfileMatch.Services/ProfileMatch.Services.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="MailKit" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
