--- a/ProfileMatch.Web/ProfileMatch.Web.csproj
+++ b/ProfileMatch.Web/ProfileMatch.Web.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\ProfileMatch.Sites\ProfileMatch.Sites.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\" />
+  </ItemGroup>
+
 </Project>
