added azure server settings

--- a/ProfileMatch.Web/appsettings.json
+++ b/ProfileMatch.Web/appsettings.json
@@ -1,5 +1,4 @@
 {
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,7 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-
   "ExternalProviders": {
     "MailKit": {
       "SMTP": {
@@ -19,6 +17,11 @@
         "SenderEmail": "dfpxisxhjdtgyeud@ethereal.email",
         "SenderName": "Profile Match Portal"
       }
+    }
+  },
+  "Azure": {
+    "SignalR": {
+      "Enabled": "true"
     }
   }
 }
