--- a/ProfileMatch.Models/ProfileMatch.Models.csproj
+++ b/ProfileMatch.Models/ProfileMatch.Models.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.1" />
   </ItemGroup>
 
