added import category from Excel, ignore attributes

--- a/ProfileMatch.Models/ProfileMatch.Models.csproj
+++ b/ProfileMatch.Models/ProfileMatch.Models.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExcelMapper" Version="5.2.352" />
     <PackageReference Include="MailKit" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.1" />
