--- a/ProfileMatch.Web/appsettings.json
+++ b/ProfileMatch.Web/appsettings.json
@@ -21,6 +21,7 @@
   },
   "ConnectionStrings": {
     "SqliteDatabase": "Data Source=PM.db;",
-    "DefaultConnection": "Data Source=185.204.216.20; Database=base2test1; User ID=serverdbuser;Password=HasloSecret123$;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=185.204.216.20; Database=profileDB; User ID=serverdbuser;Password=HasloSecret123$;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "Old": "Server=(localdb)\\MSSQLLocalDB;Database=aspnet-ProfileMatchNewest;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
