--- a/ProfileMatch.Web/ProfileMatch.Web.csproj
+++ b/ProfileMatch.Web/ProfileMatch.Web.csproj
@@ -20,7 +20,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.1" />
     <PackageReference Include="MudBlazor" Version="6.0.4" />
   </ItemGroup>
-
+	<Target Name="CollectMudBlazorStaticAssets" DependsOnTargets="ResolveStaticWebAssetsInputs" AfterTargets="Build" Condition=" '$(Configuration)' == 'Debug' ">
+		<Copy SourceFiles="%(StaticWebAsset.Identity)" DestinationFolder="wwwroot/temp" Condition="$([System.String]::Copy(%(StaticWebAsset.Identity)).Contains('mudblazor'))" />
+	</Target>
   <ItemGroup>
     <ProjectReference Include="..\ProfileMatch.Components\ProfileMatch.Components.csproj" />
     <ProjectReference Include="..\ProfileMatch.Data\ProfileMatch.Data.csproj" />
