added Files to ignored

--- a/.gitignore
+++ b/.gitignore
@@ -305,6 +305,7 @@ _Pvt_Extensions
 # Paket dependency manager
 .paket/paket.exe
 paket-files/
+/ProfileMatch.Web/wwwroot/Files
 
 # FAKE - F# Make
 .fake/
