updated dialogs, restored reset password option

--- a/ProfileMatch.Web/appsettings.json
+++ b/ProfileMatch.Web/appsettings.json
@@ -10,11 +10,11 @@
   "ExternalProviders": {
     "MailKit": {
       "SMTP": {
-        "Address": "smtp.ethereal.email",
+        "Address": "185.204.216.20",
         "Port": "587",
-        "Account": "dfpxisxhjdtgyeud@ethereal.email",
-        "Password": "gPjFBmFptwB83MV2nn",
-        "SenderEmail": "dfpxisxhjdtgyeud@ethereal.email",
+        "Account": "info@profilematch.pl",
+        "Password": "PMInfoSecret123$",
+        "SenderEmail": "info@profilematch.pl",
         "SenderName": "Profile Match Portal"
       }
     }
