added translation in open questions

--- a/ProfileMatch.Web/appsettings.json
+++ b/ProfileMatch.Web/appsettings.json
@@ -10,8 +10,8 @@
   "ExternalProviders": {
     "MailKit": {
       "SMTP": {
-        "Address": "185.204.216.20",
-        "Port": "587",
+        "Address": "localhost",
+        "Port": "25",
         "Account": "info@profilematch.pl",
         "Password": "PMInfoSecret123$",
         "SenderEmail": "info@profilematch.pl",
