--- a/.gitignore
+++ b/.gitignore
@@ -213,7 +213,7 @@ csx/
 # Microsoft Azure Emulator
 ecf/
 rcf/
-
+ProfileMatch.Web/wwwroot/temp
 # Windows Store app package directories and files
 AppPackages/
 BundleArtifacts/
@@ -228,7 +228,6 @@ _pkginfo.txt
 *.[Cc]ache
 # but keep track of directories ending in .cache
 !?*.[Cc]ache/
-
 # Others
 ClientBin/
 ~$*
