--- a/ProfileMatch.Web/appsettings.json
+++ b/ProfileMatch.Web/appsettings.json
@@ -1,11 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "Using": [ "Serilog.Sinks.Console" ],
+    "WriteTo": [
+      { "Name": "Console" }
+    ]
+},
 
   "ConnectionStrings": {
     "SqliteDatabase": "Data Source=PM.db;",
