Reduced lines of code using unit of work

--- a/ProfileMatch.Web/appsettings.json
+++ b/ProfileMatch.Web/appsettings.json
@@ -3,19 +3,32 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Information",
-        "System": "Information"
+        "Microsoft": "Information"
       }
     },
-    "Using": [ "Serilog.Sinks.Console" ],
     "WriteTo": [
-      { "Name": "Console" }
+      {
+        "Name": "Debug"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../SeriLogs/log.log",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {RequestId} {callingsysten} {Level:u3}] {Message:lj} {NewLine} {Exception}",
+          "fileSizeLimitBytes": "10000000",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": "2",
+          "rollOnFileSizeLimit": "true",
+          "shared": "true",
+          "flushToDiskInterval": "00:00:01"
+        }
+      }
     ]
-},
+  },
 
   "ConnectionStrings": {
-    "SqliteDatabase": "Data Source=PM.db;",
     "DefaultConnection": "Data Source=185.204.216.20; Database=profileDB; User ID=serverdbuser;Password=HasloSecret123$;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "Old": "Server=(localdb)\\MSSQLLocalDB;Database=aspnet-ProfileMatchNewest;Trusted_Connection=True;MultipleActiveResultSets=true"
+
   }
 }
