--- a/ProfileMatch.Components/ProfileMatch.Components.csproj
+++ b/ProfileMatch.Components/ProfileMatch.Components.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="ExcelMapper" Version="5.2.352" />
+    <PackageReference Include="Freeware.Pdf2Png" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
