--- a/ProfileMatch.Repositories/ProfileMatch.Repositories.csproj
+++ b/ProfileMatch.Repositories/ProfileMatch.Repositories.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ProfileMatch.Data\ProfileMatch.Data.csproj" />
     <ProjectReference Include="..\ProfileMatch.Models\ProfileMatch.Models.csproj" />
   </ItemGroup>
